# GamerScroll

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  FUTURE.md  GamerScroll.spec  PLAN.md  README.md  RESEARCH_BRIEF_EXTENSIONS.md  cdp_scroll.py  gamer_scroll.py  launch_comet_cdp.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-one-button-gesture-detection.md  0002-cdp-key-events-for-media-control.md  0003-gesture-to-action-mapping.md
gamerscroll/: __init__.py  __main__.py  browser.py  cdp.py  config.py  controller.py  gestures.py  gui.py  hotkeys.py  logger.py  scroller.py  startup.py  tray.py
scripts/: build.ps1  fix_readme.py  make_icon.py  rewrite_tray.py  run_dev.ps1
tests/: test_cdp.py  test_cdp_retry.py  test_config.py  test_controller.py  test_gestures.py  test_logger.py
